Prep for 1.0.0 release

--- a/vignettes/bestNormalize.Rmd
+++ b/vignettes/bestNormalize.Rmd
@@ -18,9 +18,11 @@ library(bestNormalize)
 
 The `bestNormalize` package contains a suite of transformation-estimating functions that can be used to normalize data. The function of the same name attempts to find and execute the best of all of these potential normalizing transformations. In this package, we define "normalize" as in "to render data Gaussian", rather than transform it to the 0-1 scale.
 
-There are many instances where researchers may want to normalize a variable. What may come to mind first is the (often problematic) assumption of normality of the outcome (conditional on the covariates) in the classical linear regression problem. Over the years many methods have been used to relax this assumption: generalized linear models, quantile regression, survival models, etc. One technique that is still somewhat popular in this context is to "beat the data" to look normal via some kind of normalizing transformation. This could be something as simple as a log transformation, or something as complex as a Yeo-Johnson transformation. While perhaps not the most elegant solution the problem, often this technique works well as a quick and dirty solution. 
+There are many instances where researchers may want to normalize a variable: 
 
-Another increasingly popular application of normalization occurs in applied regression settings with highly skewed distributions of the covariates. In these settings, there exists the tendency to have high leverage points (and highly influential points), even when one centers and scales the covariates. When examining interactions, these influential points can become especially problematic since the leverage of that point is amplified for every child interaction of which it is a parent. Normalization of the covariates mitigates the leverage and influence of these covariates, which allows for easier model selection. As a result, popular model selection packages such as `caret` and `recipes` have built-in mechanisms to normalize the predictor variables (they call this "preprocessing"). This concept is unique in that it forgoes the assumption of linearity between the outcome and the covariate, opting instead for a linear relationship between Y and the transformed value of the covariate (which in many cases may be more plausible). 
+1) The (often problematic) assumption of normality of the outcome (conditional on the covariates) in the classical linear regression problem. Over the years many methods have been used to relax this assumption: generalized linear models, quantile regression, survival models, etc. One technique that is still somewhat popular in this context is to "beat the data" to look normal via some kind of normalizing transformation. This could be something as simple as a log transformation, or something as complex as a Yeo-Johnson transformation. While perhaps not the most elegant solution the problem, often this technique works well as a quick and dirty solution. 
+
+2) Another increasingly popular application of normalization occurs in applied regression settings with highly skewed distributions of the covariates. In these settings, there exists the tendency to have high leverage points (and highly influential points), even when one centers and scales the covariates. When examining interactions, these influential points can become especially problematic since the leverage of that point is amplified for every child interaction of which it is a parent. Normalization of the covariates mitigates the leverage and influence of these covariates, which allows for easier model selection. As a result, popular model selection packages such as `caret` and `recipes` have built-in mechanisms to normalize the predictor variables (they call this "preprocessing"). This concept is unique in that it forgoes the assumption of linearity between the outcome and the covariate, opting instead for a linear relationship between Y and the transformed value of the covariate (which in many cases may be more plausible). 
 
 This package is designed to make this normalization transformation as effortless and consistent as possible. This package also introduces Ordered Quantile (ORQ) normalization via `orderNorm`, a normalization technique based off of a rank mapping to the normal distribution, which *guarantees* normally distributed transformed data (if ties are not present). We show in the accompanying paper that ORQ normalization performs very consistently accross different distributions. It is able to successfully transform left/right skewed data, multimodal data, and even data generated from a Cauchy distribution (effacacy of transformation was tested on out-of-sample data).
 
@@ -59,7 +61,7 @@ g(x;\lambda) &=
 \boldsymbol 1 _{(\lambda \neq 0, x \geq 0)} \frac{(x+1)^\lambda-1}{\lambda} \\
 &+ \boldsymbol 1_{(\lambda = 0, x \geq 0)} \log (x+1) \\
 &+ \boldsymbol 1_{(\lambda \neq 2, x < 0)} \frac{(1-x)^{2-\lambda}-1}{\lambda - 2} \\
-&+ \boldsymbol 1_{(\lambda = 0, x < 0)} -\log (1-x) \\
+&+ \boldsymbol 1_{(\lambda = 2, x < 0)} -\log (1-x) \\
 \end{aligned}
 $$
 
@@ -120,15 +122,15 @@ The `bestNormalize` package does also include a function to perform a binarizing
 
 The `bestNormalize` function selects the best transformation according to the Pearson P statistic (divided by its degrees of freedom), as calculated by the `nortest` package. There are a variety of normality tests out there, but the benefit of the Pearson P / df is that it is a relatively interpretable goodness of fit test, and the ratio P / df can be compared between transformations as an absolute measure of the departure from normality (if the data follows close to a normal distribution, this ratio will be close to 1). The transformation whose transformed values fit normality the closest according to this statistic (or equivalently, this ratio), is selected by `bestNormalize`. The ratios are printed when the object is printed, see examples in the next section. 
 
-Since the ORQ technique is destined to win by this metric, since it is forcing the data to follow a normal distribution, we include the option to calculate an *out-of-sample* estimate for the P / df statistic. Since this method requires repeated cross-validation, it can be a little bit problematic: 
+The ORQ technique is destined to win by this (in-sample) metric, since it is forcing the transformed data to follow a normal distribution. For this reason, by default the `bestNormalize` function calculates an *out-of-sample* estimate for the P / df statistic. Since this method requires repeated cross-validation, it can be a little bit problematic: 
 
 1) The results and the chosen transformation can depend on the seed,
-2) It takes considerably longer to run, and
+2) It takes considerably longer to eestimate than the in-sample statistic, and
 3) It is unclear how to choose the number of folds and repeats
 
-For these issues, (1) is only important for small sample sizes, and luckily the transformations chosen in cases where it's a close call will look very similar to one another, so it shouldn't make a practical difference. For (2), we have allowed for parallelization to slightly speed up this process, however there could be better ways of speeding this up. For (3), we recommend 10-fold cross-validation with 5  repeats as the default, but if the sample is small, it could be worth going to 5 folds instead with more repeats; accurate estimation of P/df requires a relatively large fold size (as a rule of thumb, 20 observations per fold seems to be enough for most cases, but this can vary of course depending on the distribution).  
+To respond to these issues, (1) is only important for small sample sizes, and luckily the transformations chosen in cases where it's a close call will look very similar to one another, so it shouldn't make a practical difference. For (2), we have allowed for parallelization to slightly speed up this process, however there could be better ways of speeding this up. For (3), we recommend 10-fold cross-validation with 5  repeats as the default, but if the sample is small, it could be worth going to 5 folds instead with more repeats; accurate estimation of P/df requires a relatively large fold size (as a rule of thumb, 20 observations per fold seems to be enough for most cases, but this can vary of course depending on the distribution).  
 
-If the user specifies `out_of_sample = FALSE`, this will highly speed up the process as the function does not perform repeated CV. However the ORQ normalization will virtually always be chosen. If this method is chosen, we recommend setting `allow_orderNorm = FALSE` in order to pick the best of the other transformations, otherwise the user may as well choose `orderNorm` to begin with.
+If the user specifies `out_of_sample = FALSE`, this will highly speed up the process as the function does not perform repeated CV. However the ORQ normalization will virtually always be chosen. If this method is chosen, we recommend also setting `allow_orderNorm = FALSE` in order to pick the best of the other transformations, otherwise the user may as well choose `orderNorm` to begin with.
 
 The parallelization for `bestNormalize` is performed via the `parallel` package, and implemented by using the `cluster` argument. Users should create a cluster using `makeCluster`, then pass that cluster into the `bestNormalize` function (see Parallel in "Examples" section). The amount that this speeds up the estimation of out-of-sample estimates depends on the number of repeats, the number of cores, and the sample size of the vector to be normalized. The plot below shows the estimation time for 10-fold cross-validation with 15 repeats on a gamma distributed random variable with various sample sizes and cores. Note that the estimates below do not count the time it takes to call `makeCluster` or `stopCluster`. Evidently, the speed-up occurs past a few thousand observations for 15 repeats. 
 
@@ -244,7 +246,7 @@ autotrader$yearsold <- 2017 - autotrader$Year
 (priceBN <- bestNormalize(autotrader$price))
 ```
 
-Note that `orderNorm` throws an error due to the ties in the price vector. We can see that the estimated normality statistic for the OrderNorm transformation is close to one, however, so we know it is performing quite well. It is also performing better than all of the other transformations. 
+Note that `orderNorm` throws a warning due to the ties in the price vector. We can see that the estimated normality statistic for the OrderNorm transformation is close to one, however, so we know it is performing quite well. It is also performing better than all of the other transformations. 
 
 ```{r}
 (mileageBN <- bestNormalize(autotrader$mileage))
