--- a/vignettes/bestNormalize.Rmd
+++ b/vignettes/bestNormalize.Rmd
@@ -24,7 +24,7 @@ There are many instances where researchers may want to normalize a variable:
 
 2) Another increasingly popular application of normalization occurs in applied regression settings with highly skewed distributions of the covariates. In these settings, there exists the tendency to have high leverage points (and highly influential points), even when one centers and scales the covariates. When examining interactions, these influential points can become especially problematic since the leverage of that point is amplified for every child interaction of which it is a parent. Normalization of the covariates mitigates the leverage and influence of these covariates, which allows for easier model selection. As a result, popular model selection packages such as `caret` and `recipes` have built-in mechanisms to normalize the predictor variables (they call this "preprocessing"). This concept is unique in that it forgoes the assumption of linearity between the outcome and the covariate, opting instead for a linear relationship between Y and the transformed value of the covariate (which in many cases may be more plausible). 
 
-This package is designed to make this normalization transformation as effortless and consistent as possible. This package also introduces Ordered Quantile (ORQ) normalization via `orderNorm`, a normalization technique based off of a rank mapping to the normal distribution, which *guarantees* normally distributed transformed data (if ties are not present). We show in the accompanying paper that ORQ normalization performs very consistently accross different distributions. It is able to successfully transform left/right skewed data, multimodal data, and even data generated from a Cauchy distribution (effacacy of transformation was tested on out-of-sample data).
+This package is designed to make this normalization transformation as effortless and consistent as possible. This package also introduces Ordered Quantile (ORQ) normalization via `orderNorm`, a normalization technique based off of a rank mapping to the normal distribution, which *guarantees* normally distributed transformed data (if ties are not present). We show in the accompanying paper that ORQ normalization performs very consistently across different distributions. It is able to successfully transform left/right skewed data, multimodal data, and even data generated from a Cauchy distribution (efficacy of transformation was tested on out-of-sample data).
 
 All of the transformations contained in this package and implemented in `bestNormalize` are reversible (i.e., 1-1), which allows for straight-forward interpretation and consistency. In other words, any analysis performed on the normalized data can be interpreted using the original unit (see application). Note though that changing the `type = "s"` argument in the `lambert` function may lead to a transformation that is not 1-1, so this method is not yet included in the various methods estimated by the `bestNormalize` function.
 
@@ -127,7 +127,7 @@ The `bestNormalize` function selects the best transformation according to the Pe
 The ORQ technique is destined to win by this (in-sample) metric, since it is forcing the transformed data to follow a normal distribution. For this reason, by default the `bestNormalize` function calculates an *out-of-sample* estimate for the P / df statistic. Since this method requires repeated cross-validation, it can be a little bit problematic: 
 
 1) The results and the chosen transformation can depend on the seed,
-2) It takes considerably longer to eestimate than the in-sample statistic, and
+2) It takes considerably longer to estimate than the in-sample statistic, and
 3) It is unclear how to choose the number of folds and repeats
 
 To respond to these issues, (1) is only important for small sample sizes, and luckily the transformations chosen in cases where it's a close call will look very similar to one another, so it shouldn't make a practical difference. For (2), we have allowed for parallelization to slightly speed up this process, however there could be better ways of speeding this up. For (3), we recommend 10-fold cross-validation with 5  repeats as the default, but if the sample is small, it could be worth going to 5 folds instead with more repeats; accurate estimation of P/df requires a relatively large fold size (as a rule of thumb, 20 observations per fold seems to be enough for most cases, but this can vary of course depending on the distribution).  
@@ -211,7 +211,7 @@ plot(xx, predict(BNobject, newdata = xx), type = "l", col = 1,
 
 ## Visualizing out-of-sample estimates of normality
 
-The `bestNormalize` function will save the estimated normality statistics that it obtained for each fold and repeat of cross-validation. Users can visualize these relatively easily via a boxplot (see below), which may give some insight into how much the tranformation is truly prefered by the normality statistic, or if it doesn't matter so much as much which transformation is chosen. In this example, Box-Cox, LambertW, and ORQ seem to be doing similarly to eachother, whereas the Yeo-Johnson is under-performing.
+The `bestNormalize` function will save the estimated normality statistics that it obtained for each fold and repeat of cross-validation. Users can visualize these relatively easily via a boxplot (see below), which may give some insight into how much the transformation is truly preferred by the normality statistic, or if it doesn't matter so much as much which transformation is chosen. In this example, Box-Cox, LambertW, and ORQ seem to be doing similarly to each other, whereas the Yeo-Johnson is under-performing.
 
 ```{r}
 boxplot(BNobject$resampled_norm_stats)
