--- a/vignettes/bestNormalize.Rmd
+++ b/vignettes/bestNormalize.Rmd
@@ -82,7 +82,7 @@ ORQ normalization, while based on this transformation, is a little more complica
 
 On new data *within* the range of the original data, this transformation refers to the linear interpolation between two of the original data points. On new data *outside* the range of the original data, the transformation returns a warning and extrapolates using a shifted logit approximation of the ranks to the original data. This is visualized below via the `iris` data set, on the `Petal.Width` variable. 
 
-```{r, echo = FALSE, warning = FALSE}
+```{r orq_vis, echo = FALSE, warning = FALSE}
 
 x <- iris$Petal.Width
 on <- orderNorm(x)
@@ -136,7 +136,7 @@ If the user specifies `out_of_sample = FALSE`, this will highly speed up the pro
 
 The parallelization for `bestNormalize` is performed via the `parallel` package, and implemented by using the `cluster` argument. Users should create a cluster using `makeCluster`, then pass that cluster into the `bestNormalize` function (see Parallel in "Examples" section). The amount that this speeds up the estimation of out-of-sample estimates depends on the number of repeats, the number of cores, and the sample size of the vector to be normalized. The plot below shows the estimation time for 10-fold cross-validation with 15 repeats on a gamma distributed random variable with various sample sizes and cores. Note that the estimates below do not count the time it takes to call `makeCluster` or `stopCluster`. Evidently, the speed-up occurs past a few thousand observations for 15 repeats. 
 
-```{r, echo = FALSE, out.width = "75%"}
+```{r par_vis, echo = FALSE, out.width = "75%"}
 knitr::include_graphics("parallel_timings.jpg")
 ```
 
@@ -146,17 +146,17 @@ In this section, I provide some code that performs each of the transformations d
 
 ## Basic Implementation
 
-```{r}
+```{r gen_data}
 
 # Generate some data
 set.seed(100)
-x <- rgamma(1000, 1, 1)
+x <- rgamma(250, 1, 1)
 MASS::truehist(x, nbins = 12)
 ```
 
 This data is clearly not normal. Let's use the `bestNormalize` functionality to perform a suite of potential transformations, and see how each method performs.
 
-```{r}
+```{r vis_code}
 # Lambert's W x F transfromation
 (lambert_obj <- lambert(x))
 # Box Cox's Transformation
@@ -176,7 +176,7 @@ This data is clearly not normal. Let's use the `bestNormalize` functionality to 
 
 These objects can then be fed into the `predict` function to perform the transformation on new values. The reverse transformation is also possible with this function. Below we plot the transformation for a range of new x values
 
-```{r}
+```{r vis_data}
 xx <- seq(min(x), max(x), length = 100)
 plot(xx, predict(lambert_obj, newdata = xx), type = "l", col = 1, ylim = c(-4, 4),
      xlab = 'x', ylab = "g(x)")
@@ -190,7 +190,7 @@ legend("bottomright", legend = c("Lambert WxF", "Box Cox", "Yeo-Johnson", "Order
 
 To examine how each of them performed (In-Sample), we can visualize the transformed values in a histogram.
 
-```{r, fig.height=8, fig.width = 7}
+```{r hist_trans, fig.height=8, fig.width = 7}
 par(mfrow = c(2,2))
 MASS::truehist(lambert_obj$x.t, main = "Lambert WxF transformation", nbins = 12)
 MASS::truehist(boxcox_obj$x.t, main = "Box Cox transformation", nbins = 12)
@@ -200,7 +200,7 @@ MASS::truehist(orderNorm_obj$x.t, main = "orderNorm transformation", nbins = 12)
 
 The best transformation in this case is plotted below.
 
-```{r}
+```{r hist_best}
 par(mfrow = c(1,2))
 MASS::truehist(BNobject$x.t, 
                main = paste("Best Transformation:", 
@@ -213,7 +213,7 @@ plot(xx, predict(BNobject, newdata = xx), type = "l", col = 1,
 
 The `bestNormalize` function will save the estimated normality statistics that it obtained for each fold and repeat of cross-validation. Users can visualize these relatively easily via a boxplot (see below), which may give some insight into how much the transformation is truly preferred by the normality statistic, or if it doesn't matter so much as much which transformation is chosen. In this example, Box-Cox, LambertW, and ORQ seem to be doing similarly to each other, whereas the Yeo-Johnson is under-performing.
 
-```{r}
+```{r boxplot}
 boxplot(BNobject$resampled_norm_stats)
 ```
 
@@ -222,18 +222,11 @@ boxplot(BNobject$resampled_norm_stats)
 
 The `bestNormalize` function can be quite slow, since it's using repeated CV to estimate the out-of-sample efficacy. If the user specifies `out_of_sample = FALSE"`, this will highly speed up the process, however the ORQ normalization will virtually always be chosen. If this method is chosen, we recommend setting `allow_orderNorm = FALSE` in order to pick the best of the other transformations.
 
-```{r}
+```{r bn_output}
 bestNormalize(x, allow_orderNorm = FALSE, out_of_sample = FALSE)
 ```
 
-We also make it easy for users to parallelize the repeated CV process via the `cluster` argument and the `parallel` package. 
-
-```{r, eval = FALSE}
-library(parallel)
-cl <- makeCluster(4)
-bestNormalize(x, cluster = cl)
-stopCluster(cl)
-```
+We also make it easy for users to parallelize the repeated CV process via the `cluster` argument and the `parallel` package. A cluster can be set up with `makeCluster` and passed to `bestNormalize` via the `cluster = ` argument.
 
 This speed-up is dependent on the number of repeats, the length of the vector to be transformed, and the number of cores in the cluster. It could well make the computation slower due to the overhead computations of setting up the process, so in cases where the sample size is relatively small and the number of repeats is also small, it is probably better to not worry about the parallelization.
 
@@ -241,7 +234,7 @@ This speed-up is dependent on the number of repeats, the length of the vector to
 
 The `autotrader` data set was scraped from the [autotrader website](https://www.autotrader.com/) as part of this package (and because at the time of writing, I needed to buy a car). I apply the `bestNormalize` functionality to de-skew mileage, age, and price in my pricing model. See `?autotrader` for more information on this data set.
 
-```{r}
+```{r load_appdata}
 data("autotrader")
 autotrader$yearsold <- 2017 - autotrader$Year
 ### Using best-normalize
@@ -250,19 +243,19 @@ autotrader$yearsold <- 2017 - autotrader$Year
 
 Note that `orderNorm` throws a warning due to the ties in the price vector. We can see that the estimated normality statistic for the OrderNorm transformation is close to one, however, so we know it is performing quite well. It is also performing better than all of the other transformations. 
 
-```{r}
+```{r bn_mileage}
 (mileageBN <- bestNormalize(autotrader$mileage))
 ```
 
 Similarly, the ORQ normalization performed best for mileage, and the ties didn't seem to be too big of a deal.
 
-```{r}
+```{r bn_yearsold}
 (yearsoldBN <- bestNormalize(autotrader$yearsold))
 ```
 
 Here we see something peculiar; none of the normalizing transformations performed will according to the normality statistics. The frequency of ties in this case makes it very difficult to find a normalizing transformation (see figure below as to why this is). None the less, orderNorm is chosen as it has the lowest estimated P/df statistic. 
 
-```{r, fig.height=8, fig.width=7}
+```{r hist_app, fig.height=8, fig.width=7}
 par(mfrow = c(3, 2))
 MASS::truehist(autotrader$price)
 MASS::truehist(priceBN$x.t)
@@ -272,7 +265,7 @@ MASS::truehist(autotrader$yearsold)
 MASS::truehist(yearsoldBN$x.t)
 ```
 
-```{r}
+```{r hist_app2}
 par(mfrow = c(2, 2))
 price.xx <- seq(min(autotrader$price), max(autotrader$price), length = 100)
 mileage.xx <- seq(min(autotrader$mileage), max(autotrader$mileage), length = 100)
@@ -293,7 +286,7 @@ Next, we will fit a linear model on the transformed values of each variable. The
 
 For the sake of illustration, we also plot the effects of a GAM model to see if there is a big difference. The GAM models seem to be more influenced by outliers than the fits to the transformed data. 
 
-```{r}
+```{r app_vis}
 autotrader$price.t <- priceBN$x.t
 autotrader$mileage.t <- mileageBN$x.t
 autotrader$yearsold.t <- yearsoldBN$x.t
