--- a/vignettes/bestNormalize.Rmd
+++ b/vignettes/bestNormalize.Rmd
@@ -267,7 +267,7 @@ Similarly, the ORQ normalization performed best for mileage, and the ties didn't
 (yearsoldBN <- bestNormalize(autotrader$yearsold, r = 1, k = 5))
 ```
 
-Here we see something peculiar; none of the normalizing transformations performed will according to the normality statistics. The frequency of ties in this case makes it very difficult to find a normalizing transformation (see figure below as to why this is). None the less, orderNorm is chosen as it has the lowest estimated P/df statistic. 
+Here we see something peculiar; none of the normalizing transformations performed well according to the normality statistics. The frequency of ties in this case makes it very difficult to find a normalizing transformation (see figure below as to why this is). Even so, orderNorm is chosen as it has the lowest estimated P/df statistic. 
 
 ```{r hist_app, fig.height=8, fig.width=7}
 par(mfrow = c(3, 2))
