--- a/README.Rmd
+++ b/README.Rmd
@@ -4,19 +4,20 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, echo = FALSE}
+```{r, echo = FALSE, include=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
   fig.path = "README-"
 )
+library(bestNormalize)
 ```
 
 
 # bestNormalize: Flexibly calculate the best normalizing transformation for a vector
 
 [![Travis-CI Build Status](https://travis-ci.org/petersonR/bestNormalize.svg?branch=master)](https://travis-ci.org/petersonR/bestNormalize)
-[![CRAN version](http://www.r-pkg.org/badges/version/bestNormalize)](https://cran.r-project.org/package=bestNormalize)
+[![CRAN version](https://www.r-pkg.org/badges/version/bestNormalize)](https://cran.r-project.org/package=bestNormalize)
 [![downloads](https://cranlogs.r-pkg.org/badges/bestNormalize)](https://cran.r-project.org/package=bestNormalize)
 
 The `bestNormalize` R package was designed to help find a normalizing transformation for a vector. There are many techniques that have been developed in this aim, however each has been subject to their own strengths/weaknesses, and it is unclear on how to decide which will work best until the data is oberved. This package will look at a range of possible transformations and return the best one, i.e. the one that makes it look the *most* normal. 
@@ -25,7 +26,7 @@ Note that some authors use the term "normalize" differently than in this package
 
 This package also introduces a new adaptation of a normalization technique, which we call Ordered Quantile normalization (`orderNorm()`, or ORQ). ORQ transforms the data based off of a rank mapping to the normal distribution.  This allows us to *guarantee* normally distributed transformed data (if ties are not present). The adaptation uses a shifted logit approximation on the ranks transformation to perform the transformation on newly observed data outside of the original domain. On new data within the original domain, the transformation uses linear interpolation of the fitted transformation.
 
-To evaluate the efficacy of the normalization technique, the `bestNormalize()` function implements repeated cross-validation to estimate the Pearson's P statistic divided by its degrees of freedom. This is called the "Normality statistic", and if it is close to 1, then the transformation can be thought of as working well. The function is designed to select the transformation that produces the lowest P / df value, when estimated on out-of-sample data (estimating this on in-sample data will always choose the orderNorm technique, and is generally not the main goal of these procedures). 
+To evaluate the efficacy of the normalization technique, the `bestNormalize()` function implements repeated cross-validation to estimate the Pearson's P statistic divided by its degrees of freedom. This is called the "Normality statistic", and if it is close to 1 (or less), then the transformation can be thought of as working well. The function is designed to select the transformation that produces the lowest P / df value, when estimated on out-of-sample data (estimating this on in-sample data will always choose the orderNorm technique, and is generally not the main goal of these procedures). 
 
 ## Installation
 
@@ -46,13 +47,16 @@ install.packages("bestNormalize")
 
 In this example, we generate 1000 draws from a gamma distribution, and normalize them:
 
-```{r example}
+```{r, eval = FALSE}
 library(bestNormalize)
+```
+
+```{r example}
 set.seed(100)
 x <- rgamma(1000, 1, 1)
 
-# Estimate best transformation
-BN_obj <- bestNormalize(x)
+# Estimate best transformation with repeated cross-validation
+BN_obj <- bestNormalize(x, allow_lambert_s = TRUE)
 BN_obj
 
 # Perform transformation
@@ -65,5 +69,18 @@ x2 <- predict(BN_obj, newdata = gx, inverse = TRUE)
 all.equal(x2, x)
 
 ```
+
+As of version 1.3, the package supports leave-one-out cross-validation as well. ORQ normalization works very well when the size of the test dataset is low relative to the training data set, so it will often be selected via leave-one-out cross-validation (which is why we set `allow_orderNorm = FALSE` here).
+
+```{r}
+(BN_loo <- bestNormalize(x, allow_orderNorm = FALSE, allow_lambert_s = TRUE, loo = TRUE))
+```
+
+It is also possible to visualize these transformations: 
+
+```{r, eval = FALSE}
+plot(BN_obj, leg_loc = "bottomright")
+```
+
 
 For a more in depth tutorial, please consult [the package vignette](https://CRAN.R-project.org/package=bestNormalize/vignettes/bestNormalize.html).
