--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,10 @@ library(bestNormalize)
 
 [![Travis-CI Build Status](https://travis-ci.org/petersonR/bestNormalize.svg?branch=master)](https://travis-ci.org/petersonR/bestNormalize)
 [![CRAN version](https://www.r-pkg.org/badges/version/bestNormalize)](https://cran.r-project.org/package=bestNormalize)
+[![R-CMD-check](https://github.com/petersonR/bestNormalize/workflows/R-CMD-check/badge.svg)](https://github.com/petersonR/bestNormalize/actions)
 [![downloads](https://cranlogs.r-pkg.org/badges/bestNormalize)](https://cran.r-project.org/package=bestNormalize)
+[![Codecov test coverage](https://codecov.io/gh/petersonR/bestNormalize/branch/master/graph/badge.svg)](https://codecov.io/gh/petersonR/bestNormalize?branch=master)
+
 
 The `bestNormalize` R package was designed to help find a normalizing transformation for a vector. There are many techniques that have been developed in this aim, however each has been subject to their own strengths/weaknesses, and it is unclear on how to decide which will work best until the data is oberved. This package will look at a range of possible transformations and return the best one, i.e. the one that makes it look the *most* normal. 
 
@@ -30,7 +33,7 @@ To evaluate the efficacy of the normalization technique, the `bestNormalize()` f
 
 ## Installation
 
-You can install the most recent (devel) version of bestNormalize from github with:
+You can install the most recent (devel) version of bestNormalize from GitHub with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
