Improve scalability of ORQ/orderNorm transformation

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,6 @@ library(bestNormalize)
 
 # bestNormalize: Flexibly calculate the best normalizing transformation for a vector
 
-[![Travis-CI Build Status](https://travis-ci.org/petersonR/bestNormalize.svg?branch=master)](https://travis-ci.org/petersonR/bestNormalize)
 [![CRAN version](https://www.r-pkg.org/badges/version/bestNormalize)](https://cran.r-project.org/package=bestNormalize)
 [![R-CMD-check](https://github.com/petersonR/bestNormalize/workflows/R-CMD-check/badge.svg)](https://github.com/petersonR/bestNormalize/actions)
 [![downloads](https://cranlogs.r-pkg.org/badges/bestNormalize)](https://cran.r-project.org/package=bestNormalize)
@@ -86,4 +85,4 @@ plot(BN_obj, leg_loc = "bottomright")
 ```
 
 
-For a more in depth tutorial, please consult [the package vignette](https://CRAN.R-project.org/package=bestNormalize/vignettes/bestNormalize.html).
+For a more in depth tutorial, please consult [the package vignette](https://CRAN.R-project.org/package=bestNormalize/vignettes/bestNormalize.html), or the [package website](https://petersonr.github.io/bestNormalize).
